XSCOLIBRI-99: The bottom of the header text is cropped Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/colibri@23476 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -201,7 +201,6 @@ h1 {
     font-size: 2.3em;
     font-weight: normal;
     letter-spacing: -1px;
-    line-height: 1.1em;
 }
 
 h2 {
@@ -209,14 +208,12 @@ h2 {
     font-weight: normal;
     font-style: normal;
     font-size: 2em;
-    line-height: 1.1em;
 }
 
 h3 {
     padding-top: 1px;
     font-weight: normal;
     font-size: 1.6em;
-    line-height: 1.1em;
     margin: 20px 0;
 }
 
@@ -225,19 +222,18 @@ h4 {
     font-weight: normal;
     left: 0;
     font-size: 1.4em;
-    line-height: 1.1em;
 }
 
 h5 {
     font-weight: normal;
     font-style: normal;
     font-size: 1.3em;
-    line-height: 1.1em;
 }
 
 h1, h2, h3, h4, h5{
     display:block;
     position:relative;
+    line-height: 1.2em;
 }
 #xwikicontent h1, #xwikicontent h2, #xwikicontent h3, #xwikicontent h4, #xwikicontent h5 {
   overflow: hidden;
